<resources>
    <string name="app_name">TestLab</string>

    <!-- Menu -->
    <string name="menu_save">Save</string>

    <!--Dialog-->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_start">Start</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_loading">Loading…</string>
    <string name="dialog_title_problem" translatable="false">Problem…</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_confirmation">Confirmation</string>
    <string name="dialog_error_authorization">You are not authorized</string>
    <string name="dialog_error_network">No internet connection</string>
    <string name="dialog_error_unknown">Unknown error</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_success">Success!</string>
    <string name="dialog_are_you_sure">Are you sure?</string>

    <!-- Errors -->
    <string name="error_title">Error</string>
    <string name="error_password">You have empty password or password less than 6 symbols</string>
    <string name="error_email">"You have empty email or email isn't correct"</string>
    <string name="error_project_name">You have set empty name for project</string>
    <string name="error_project_id">You have set wrong project id</string>
    <string name="error_empty_list">List is empty</string>

    <!-- Login Activity -->
    <string name="activity_login_button">Login</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_forgot_password">Forgot password?</string>

    <!-- Login Activity -->
    <string name="activity_project_detail_title">Project detail</string>

</resources>