<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme_color_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/password_container">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_email"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_error"
            style="@style/ErrorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/login_button">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_password"
            android:inputType="textPassword"
            android:lines="1"
            app:layout_constraintBottom_toTopOf="@id/password_error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password_error"
            style="@style/ErrorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/activity_login_button"
        app:layout_constraintBottom_toTopOf="@id/forgot_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        style="@style/SmallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/activity_login_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>