<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="48dp"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <!-- A blank view to force the layout to be full-width -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/dialog_title_problem" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/dialog_error_authorization" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_negative"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:text="@string/dialog_cancel" />

        <Space
            android:id="@+id/space"
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_positive"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            tools:text="@string/dialog_ok" />

    </LinearLayout>
</LinearLayout>